# vulkan-cmake

./: CMakeLists.txt  README.md
assets/shaders/: triangle.frag  triangle.vert
dep/SDL2-2.0.12/cmake/: sdl2Config.cmake
dep/glm-0.9.9.8/cmake/: glmConfig.cmake
src/: Main.cpp
